--- a/.github/workflows/devops.yml
+++ b/.github/workflows/devops.yml
@@ -14,6 +14,7 @@ jobs:
     - name: Install dependencies
       run: |
         make install
+        python -m textblob.download_corpora
     - name: Lint with pylint
       run: |
         make lint
